--- a/view/bugpile-view-take-action-on-selected-tasks.org
+++ b/view/bugpile-view-take-action-on-selected-tasks.org
@@ -40,16 +40,16 @@
 This is an imaginary result list of a user query. It shows all the
 tasks that were matched by the query either in tags, properties or
 free text (content). The result list is produced inside a dynamic
-block as a column view of a utility files that is used to collect all
-matching subtrees as second level entries under a top-level entry with
-a global ID, that is used as attribute of the dynamic block. 
+block as a column view of a utility file 'iorg-dblock-collect.org'
+that is used to collect all matching subtrees as second level entries
+under a top-level entry with a global ID, that is used as attribute of
+the dynamic block.
 
 This is likely not portable to another machine yet, so you might have
 to delete the ID in /bugpile/objects/iorg-dblock-collect.org and
 create a new one on you machine with org-id-get-create, and then use
 this new ID in the header of the dynamic block in file
-bugpile-view-take-action-on-selected-tasks.org in the
-/bugpile/view/take-action-on-selected-tasks/ directory.
+bugpile-view-take-action-on-selected-tasks.org in the /bugpile/view/ directory.
 
 For this page to be real
  1. the column view should present entries that were matched and
@@ -58,9 +58,9 @@ For this page to be real
     of each table row, put a html selectbox with possible actions at
     the bottom of the page, and wrap the whole thing in a html form.
 
- 
+Assume you selected a task and want bugpile to [[http://localhost:8008/show-task][show-task]]. 
 
-#+BEGIN: columnview :hlines 1 :id #("6f780841-1905-442e-b881-534f89b4d57e" 0 36 (fontified t face org-property-value))
+#+BEGIN: columnview :hlines 1 :id 6f780841-1905-442e-b881-534f89b4d57e
 | Task   | TODO | object-foo | html-edit | TAGS          |
 |--------+------+------------+-----------+---------------|
 | *      |      |            |           |               |
