--- a/view/bugpile-view-edit-task.org
+++ b/view/bugpile-view-edit-task.org
@@ -31,7 +31,48 @@
 
 /Edit an existing Task (Bug-Report or Feature-Request)/
 
-* Edit Task
+* anchor                                                    :noexport:anchor:
   :PROPERTIES:
   :ID:       3675e953-7f75-4319-a1e5-dfb09cadea1f
   :END:
+
+# When changing this ID, you need to change it in
+# bugpile-controller-edit-task-handler too. 
+
+
+
+
+
+* TODO bug                                 :iorg:foo:bar:
+  :PROPERTIES:
+  :COLUMNS:  %40ITEM(Task) %TODO %task-author %task-opened %task-project %bug-need-skills %TAGS
+  :object-foo: bug task html obj
+  :html-form: http://localhost:8008/save-edits
+  :html-button-value: submit
+  :html-button-name: 2f822a1e-4bb4-43be-bec4-b0c5caaa42a5
+  :task-author: tj
+  :task-closed: nil
+  :task-opened: 09-07-2012
+  :task-reopened: nil
+  :task-assigned-to: nil
+  :task-project: org-agenda
+  :bug-is-upstream: no
+  :bug-need-skills: intermediate
+  :ID:       2f822a1e-4bb4-43be-bec4-b0c5caaa42a5
+  :END:
+
+# When changing this ID, you need to change it in
+# bugpile-controller-edit-task-handler too. 
+
+Trying to change the agenda-file-list leads to problems. First, there
+is an error message like 'file list can't be a single directory', but
+it can. Second, the old directory and the new directory for the
+agenda-files are concatenated to an unvalid directory (instead of the
+new replacing the old).
+
+But this may not be a bug, because there might be some undetected
+configuration conflict somewhere that causes the misbehaviour.  
+
+
+
+
