--- a/doc/gsoc/midterm-eval.org
+++ b/doc/gsoc/midterm-eval.org
@@ -19,6 +19,47 @@ loads all other iOrg source files.
 M-x customize-variable RET iorg-projects-config
 adapt the path of :dir in project "bugpile" to your settings
 
+
+* Start elnode servers (test controller and logic)
+Since I could not achieve that the same elnode server serves the
+static html files from projects docroot and the users interactive http
+requests (doesn't make no sense anyway?), launching an iOrg project
+now starts 2 elnode servers, one for each task. Hosts and ports are
+customizable in 'iorg-projects-config'. 
+
+*** launch bugpile
+1. goto iorg-controller-launch-project in
+   /bugpile/iorg/lisp/iorg-controller.el and read the docstring.
+2. (optional) goto iorg-projects-config' in
+   /bugpile/iorg/lisp/iorg-projects/iorg-projects.el and check the
+   host/port configuration for bugpile project and docroot. You can
+   customize this variable too. 
+3. M-x iorg-controller-launch-project RET bugpile
+4. open http://localhost:8009 in a browser to see the automatic index
+   of bugpiles docroot (and witness an elnode bug - the files in the
+   docroot are not served). Note that .org files in docroot are
+   automatic exported to html, and reexported, when newer than html
+   files. 
+5. open http://localhost:8008 in a browser to see the index.html page
+   of the bugpile project.
+6. M-x iorg-controller-stop-project-servers RET bugpile to stop both
+   servers. 
+7. goto 3. and start the servers again. if that doesn't really work -
+   is that a bug (of elnode?)? or is it that _Emacs_ as a server has to
+   be _restarted_ to get rid of code loaded during the first launch?
+
+*** play with bugpile
+follow the links (forget about the open-new-task link, doesn't work),
+sometimes 2 clicks are necesary for a reaction. with the last link, the
+task is shown in editable form (text-fields and text areas) reset
+button works, submit button not yet. 
+
+elnode error messages (_all_ messages are labeled error,
+unfortunately) give very little information about what happend, and
+the debugger always exits when things get interesting. 
+
+html of bugpile-view-edit-task.html doesn't look bad though. 
+
 * Make class and objects (test logic)
 ** object
 The abstract 'object' class is already included in the repo, only
@@ -258,101 +299,4 @@ FEATURE
 # End:
 #+end_src
 
-
-* Start elnode servers (test controller and logic)
-Since I could not achieve that the same elnode server serves the
-static html files from projects docroot and the users interactive http
-requests (doesn't make no sense anyway?), launching an iOrg project
-now starts 2 elnode servers, one for each task. Hosts and ports are
-customizable in 'iorg-projects-config'. 
-
-** launch bugpile
-1. goto iorg-controller-launch-project in
-   /bugpile/iorg/lisp/iorg-controller.el and read the docstring.
-2. (optional) goto iorg-projects-config' in
-   /bugpile/iorg/lisp/iorg-projects/iorg-projects.el and check the
-   host/port configuration for bugpile project and docroot. You can
-   customize this variable too. 
-3. M-x iorg-controller-launch-project RET bugpile
-4. open http://localhost:8009 in a browser to see the automatic index
-   of bugpiles docroot (and witness an elnode bug - the files in the
-   docroot are not served). Note that .org files in docroot are
-   automatic exported to html, and reexported, when newer than html
-   files. 
-5. open http://localhost:8008 in a browser to see the index.html page
-   of the bugpile project.
-6. M-x iorg-controller-stop-project-servers RET bugpile to stop both
-   servers. 
-7. goto 3. and start the servers again. if that doesn't really work -
-   is that a bug (of elnode?)? or is it that _Emacs_ as a server has to
-   be _restarted_ to get rid of code loaded during the first launch?
-
-** play with bugpile
-after re-launch (and most likely restart of Emacs), try the following:
-*** search tasklist (rudimentary functionality)
-1. evaluate
-
-#+begin_src emacs-lisp
-(setq org-columns-default-format
- "%40ITEM(Task) %TODO %object-foo %html-edit %TAGS")
-#+end_src
-
-#+results:
-: %40ITEM(Task) %TODO %object-foo %html-edit %TAGS
-
-2. delete the ID in /bugpile/objects/iorg-dblock-collect.org and
-create a new one on you machine with org-id-get-create
-
-3. use this new ID in the header of the dynamic block in file
-bugpile-view-take-action-on-selected-tasks.org in the /bugpile/view/
-directory.
-4. update the dblock with org-dblock-update
-5. open http://localhost:8008 in a browser again and follow first the
-   'search tasklist' and then 'result list' links.
-*** edit task (more or less)
-1. From the index page or from the take-action-on-selected-task
-   follow link 'show-task'. 
-2. copy this example bug into your /bugpile/objects/bug-obj.org file.
-   again, you might need to re-produce the ID and copy and paste the
-   new one into the :id header argument of the dblocks in
-   /bugpile/view/bugpile-view-show-task.org and
-   /bugpile/view/bugpile-view-edit-task.org.
-
-
-#+begin_src org
-* TODO bug                                                          :foo:bar:
-  :PROPERTIES:
-  :COLUMNS:  %40ITEM(Task) %TODO %task-author %task-opened %task-project %bug-need-skills %TAGS
-  :object-foo: bug task html obj
-  :html-form: iorg-controller-edit-handler
-  :html-button-value: submit
-  :task-author: tj
-  :task-closed: nil
-  :task-opened: 09-07-2012
-  :task-reopened: nil
-  :task-assigned-to: nil
-  :task-project: org-agenda
-  :bug-is-upstream: no
-  :bug-need-skills: intermediate
-  :ID:       2f822a1e-4bb4-43be-bec4-b0c5caaa42a5
-  :END:
-
-Trying to change the agenda-file-list leads to problems. First, there
-is an error message like 'file list can't be a single directory', but
-it can. Second, the old directory and the new directory for the
-agenda-files are concatenated to an unvalid directory (instead of the
-new replacing the old).
-
-But this may not be a bug, because there might be some undetected
-configuration conflict somewhere that causes the misbehaviour.  
-#+end_src
-
-
-
-
- 
-     
-   
-   
- 
 
