Two small bugs fixed in bugpile-controller-save-edits-hander. now it actually works without errors, the only remaining problem is that the extracted http-params are nil.

--- a/view/bugpile-view-edit-task.org
+++ b/view/bugpile-view-edit-task.org
@@ -43,7 +43,7 @@
 
 
 
-* TODO bug                                 :iorg:foo:bar:
+* TODO bug                                                          :foo:bar:
   :PROPERTIES:
   :COLUMNS:  %40ITEM(Task) %TODO %task-author %task-opened %task-project %bug-need-skills %TAGS
   :object-foo: bug task html obj
