--- a/view/bugpile-view-show-task.org
+++ b/view/bugpile-view-show-task.org
@@ -48,10 +48,10 @@ The task in column view (is it possible to include the content text?):
 The task in outline view:
 
 #+BEGIN: bugpile-view-show-task :hlines 1 :id 2f822a1e-4bb4-43be-bec4-b0c5caaa42a5
-* TODO bug                                                          :foo:bar:
+* TODO bug
   :PROPERTIES:
   :COLUMNS:  %40ITEM(Task) %TODO %task-author %task-opened %task-project %bug-need-skills %TAGS
-  :object-foo: bug task html obj
+  :object-foo:
   :html-form: iorg-controller-edit-handler
   :html-button-value: submit
   :task-author: tj
