--- a/objects/bug-obj.org
+++ b/objects/bug-obj.org
@@ -34,10 +34,10 @@
   :END:
 
 
-* TODO bug                                 :iorg:foo:bar:
+* TODO bug                                                     :iorg:dee:doo:
   :PROPERTIES:
   :COLUMNS:  %40ITEM(Task) %TODO %task-author %task-opened %task-project %bug-need-skills %TAGS
-  :object-foo: bug task html obj
+  :object-foo: whats up
   :html-form: http://localhost:8008/save-edits
   :html-button-value: submit
   :html-button-name: 2f822a1e-4bb4-43be-bec4-b0c5caaa42a5
