After inspecting the html files, two tiny but apparently significant bugs fixed: 1. one html attribute was finished with an : instead of an = (name: instead of name= in an <input field). 2. when concatenating html strings, I forgot to put a space between the lines, resulting in something like "value=fooname=bar"
now the http-params of the edit-task form are send apparently
correctly by elnode in the call to /save-edits, the elnode-dispatcher
is called, but elnode drops before reaching the handler function for
/save-edits. is that related to the ^M dos line endings in the http params?

--- a/objects/bug-obj.org
+++ b/objects/bug-obj.org
@@ -34,10 +34,10 @@
   :END:
 
 
-* TODO bug                                                     :iorg:dee:doo:
+* TODO bug                                                             :iorg:
   :PROPERTIES:
   :COLUMNS:  %40ITEM(Task) %TODO %task-author %task-opened %task-project %bug-need-skills %TAGS
-  :object-foo: whats up
+  :object-foo:
   :html-form: http://localhost:8008/save-edits
   :html-button-value: submit
   :html-button-name: 2f822a1e-4bb4-43be-bec4-b0c5caaa42a5
